# tera-shortcodes

./: .gitignore  Cargo.toml  README.md
examples/: app.rs
examples/templates/: test_shortcode.html
examples/templates/shortcodes/: products.html
js/: code.js
src/: lib.rs  main.rs  shortcodes.rs
templates/: test_shortcode.html
templates/shortcodes/: products.html
