[package]
name = "tera-shortcodes"
version = "0.1.4"
edition = "2021"
description = "Tera Shortcodes: A WordPress-Like Implementation"
keywords = ["tera", "template", "html", "markup"]
categories = ["template-engine"]
repository = "https://github.com/mrhdias/tera-shortcodes"
authors = ["Henrique Dias <mrhdias@gmail.com>"]
readme = "README.md"
license = "MIT"

[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
tera = { version = "1.20.0", features = ["builtins"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }

[dev-dependencies]
axum = "0.7.5"
open = "5.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
